<resources>
    <string name="app_name">myReservation</string>
    <string name="nameSurname">Achille Mago</string>
    <string name="statistics">Statistics</string>
    <string name="your_interests">Your interests</string>
    <string name="descriptionValue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ullamcorper lorem nec orci condimentum...</string>
    <string name="age">24yo</string>
    <string name="mastery">Skills</string>
    <string name="location">Location</string>
    <string name="locationValue">Turin</string>
    <string name="nickname">\@nickname</string>
    <string name="userimage">userImage</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="tennis">Tennis</string>
    <string name="padel">Padel</string>
    <string name="soccer">Soccer</string>
    <string name="victories">Victories</string>
    <string name="played">Played</string>
    <string name="draws">Draws</string>
    <string name="test">0</string>
    <string name="more_skills">+3</string>
    <string name="edit">Edit</string>
    <string name="fullName">Full Name</string>
    <string name="at">Nickname</string>
    <string name="dob">Date of birth</string>
    <string name="bodValue">09/04/1988</string>
    <string name="email">Email</string>
    <string name="emailValue">achille.mago@polito.it</string>
    <string name="description">Description</string>
    <string name="edit_picture">Change profile photo</string>
    <string name="back">Back</string>
    <string name="confirmEdit">Confirm</string>
    <string name="preference_file_key">com.example.lab_2.USER</string>
    <string name="close">Close</string>
</resources>