<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/myLinearLayoutVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile_picture"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nameSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/nameSurname"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/nickname"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameSurname" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nickname" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/age"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/location"
                    app:layout_constraintTop_toBottomOf="@+id/nickname" />

                <LinearLayout
                    android:id="@+id/badges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/age"
                    app:layout_constraintTop_toBottomOf="@+id/nickname">

                    <View
                        android:id="@+id/badge1"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/circle_shape" />

                    <View
                        android:id="@+id/badge2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/circle_shape" />

                    <View
                        android:id="@+id/badge3"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/circle_shape" />

                </LinearLayout>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:maxLines="3"
                    android:text="@string/description"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/age" />

                <TextView
                    android:id="@+id/interests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/your_interests"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

                <LinearLayout
                    android:id="@+id/interests_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/interests">

                    <TextView
                        android:id="@+id/sport1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_radius"
                        android:backgroundTint="#28690C"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="3dp"
                        android:text="@string/tennis"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/sport2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_radius"
                        android:backgroundTint="#1E53DA"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="3dp"
                        android:text="@string/padel"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/sport3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_radius"
                        android:backgroundTint="#AB1010"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="3dp"
                        android:text="@string/soccer"
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/statistics"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/interests_view" />

                <LinearLayout
                    android:id="@+id/statistics_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/statistics">

                    <LinearLayout
                        android:id="@+id/sport1_statistics"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/rectangle_radius"
                        android:backgroundTint="#28690C"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/profile_picture"
                            android:src="@drawable/ic_launcher_foreground" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sport2_statistics"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/rectangle_radius"
                            android:backgroundTint="#1E53DA"
                            android:contentDescription="@string/profile_picture"
                            android:src="@drawable/ic_launcher_foreground" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sport3_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/rectangle_radius"
                            android:backgroundTint="#AB1010"
                            android:contentDescription="@string/profile_picture"
                            android:src="@drawable/ic_launcher_foreground" />
                    </LinearLayout>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>